check_incident.log
cargo :     Checking fincrime-core v0.1.0 
(C:\Users\georg\fincrime_thedesk\core)
At line:1 char:1
+ cargo check --manifest-path 
core/Cargo.toml 2>&1 | Out-File -Encoding 
...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~
    + CategoryInfo          : NotS    
pecified: (    Checking fi...e    
_thedesk\core):String) [], Rem    
oteException
    + FullyQualifiedErrorId : Nati    
veCommandError
 
error[E0599]: no method named `next_u32` 
found for mutable reference `&mut 
SubsystemRng` in the current scope
   --> 
core\src\incident_subsystem.rs:179:82
    |
179 |             let incident_id = 
format!("inc-{}-{}-{tick}", 
comp.component_id, rng.next_u32() % 
100000);
    |                                      
                                           
 ^^^^^^^^
    |
    = help: items from traits can only be 
used if the trait is implemented and in 
scope
    = note: the following trait defines an 
item `next_u32`, perhaps you need to 
implement it:
            candidate #1: `RngCore`
help: there is a method `next_u64` with a 
similar name
    |
179 -             let incident_id = 
format!("inc-{}-{}-{tick}", 
comp.component_id, rng.next_u32() % 
100000);
179 +             let incident_id = 
format!("inc-{}-{}-{tick}", 
comp.component_id, rng.next_u64() % 
100000);
    |

error[E0600]: cannot apply unary operator 
`-` to type `u64`
   --> 
core\src\incident_subsystem.rs:247:24
    |
247 |                 1.0 - (-elapsed as 
f64 / mttr_ticks).exp()
    |                        ^^^^^^^^ 
cannot apply unary operator `-`
    |
    = note: unsigned values cannot be 
negated

warning: unused variable: `tick`
   --> core\src\customer_subsystem.rs:459:9
    |
459 |         tick: Tick,
    |         ^^^^ help: if this is 
intentional, prefix it with an underscore: 
`_tick`
    |
    = note: `#[warn(unused_variables)]` 
(part of `#[warn(unused)]`) on by default

warning: unused variable: `tick`
   --> core\src\customer_subsystem.rs:688:9
    |
688 |         tick: Tick,
    |         ^^^^ help: if this is 
intentional, prefix it with an underscore: 
`_tick`

warning: unused variable: `tick`
   --> core\src\customer_subsystem.rs:808:9
    |
808 |         tick: Tick,
    |         ^^^^ help: if this is 
intentional, prefix it with an underscore: 
`_tick`

warning: unused variable: `tick`
   --> core\src\customer_subsystem.rs:958:9
    |
958 |         tick: Tick,
    |         ^^^^ help: if this is 
intentional, prefix it with an underscore: 
`_tick`

Some errors have detailed explanations: 
E0599, E0600.
For more information about an error, try 
`rustc --explain E0599`.
warning: `fincrime-core` (lib) generated 4 
warnings
error: could not compile `fincrime-core` 
(lib) due to 2 previous errors; 4 warnings 
emitted
